gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpd 
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443 
      name: https
      protocol: HTTPS
    tls:
      credentialName: secured-gateway
      httpsRedirect: true
      mode: SIMPLE
    hosts:
    - httpd.apps.ayush.example.com
