virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpd 
spec:
  gateways:
  - httpd 
  hosts:
  - httpd.apps.ayush.example.com
  http:
  - route:
    - destination:
        host: httpd-24
        port:
          number: 8080
